--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
     "commander": "^2.9.0",
-    "git-exec": "^0.2.1"
+    "git-exec": "^0.2.1",
+    "ora": "^1.3.0"
   }
 }
