--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "co-prompt": "^1.0.0",
     "commander": "^2.9.0",
     "git-exec": "^0.2.1",
-    "ora": "^1.3.0",
-    "vic-common": "0.0.120"
+    "ora": "^1.3.0"
   }
 }
