--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "nornj-cli",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0-alpha.6",
   "description": "The CLI for scaffolding NornJ template projects",
   "bin": {
     "nj": "bin/nj"
+  },
+  "files": [
+    "bin/",
+    "lib/",
+    "templates/",
+    "config.json",
+    "LICENSE",
+    "README.md"
+  ],
+  "scripts": {
+    "cli": "nj init"
   },
   "repository": {
     "type": "git",
@@ -21,6 +32,8 @@
     "co-prompt": "^1.0.0",
     "commander": "^2.9.0",
     "git-exec": "^0.2.1",
+    "global-modules": "^1.0.0",
+    "nornj": "^0.4.2-rc.9",
     "ora": "^1.3.0"
   }
 }
