--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nornj-cli",
-  "version": "0.1.0-alpha.8",
+  "version": "0.1.0-alpha.10",
   "description": "The CLI for scaffolding NornJ template projects",
   "bin": {
     "nj": "bin/nj"
@@ -34,6 +34,7 @@
     "git-exec": "^0.2.1",
     "global-modules": "^1.0.0",
     "nornj": "^0.4.2-rc.9",
-    "ora": "^1.3.0"
+    "ora": "^1.3.0",
+    "unzip": "^0.1.11"
   }
 }
