--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nornj-cli",
-  "version": "0.1.0-alpha.11",
-  "description": "The CLI for scaffolding NornJ template projects",
+  "version": "0.1.0-alpha.15",
+  "description": "The CLI for scaffolding NornJ template projects, and do more things",
   "bin": {
     "nj": "bin/nj"
   },
@@ -33,6 +33,7 @@
     "commander": "^2.9.0",
     "git-exec": "^0.2.1",
     "global-modules": "^1.0.0",
+    "mkdirp": "^0.5.1",
     "nornj": "^0.4.2-rc.12",
     "ora": "^1.3.0",
     "unzip": "^0.1.11"
