--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "global": true,
   "npmUrl": "https://registry.npmjs.org",
-  "privateNpmUrl": "http://192.168.151.68:8001"
+  "privateNpmUrl": "http://192.168.151.68:8001",
+  "privateLib": "vic-common"
 }
