--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -88,8 +88,8 @@
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
-    "mobx-state-tree": "0.9.5",
-    "nornj": "^0.4.2-rc.13",
+    "mobx-state-tree": "^1.1.0",
+    "nornj": "^0.4.2-rc.14",
     "nornj-loader": "^0.4.2-beta.1",
     "nornj-react": "^0.4.2-rc.2",
     "react": "^15.6.2",
