--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -2,6 +2,7 @@
   "name": "nj-react-mst-boilerplate",
   "version": "1.0.0",
   "description": "React + Mobx-state-tree项目模板",
+  "templateType": "single-page",
   "main": "app.js",
   "scripts": {
     "dev-web": "npm run server | cross-env Project=web webpack-dev-server --host 0.0.0.0 --inline --hot --progress",
@@ -90,7 +91,7 @@
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
-    "mobx-state-tree": "^1.1.0",
+    "mobx-state-tree": "^1.2.0",
     "nornj": "^0.4.2-rc.14",
     "nornj-loader": "^0.4.2-beta.1",
     "nornj-react": "^0.4.2-rc.2",
