--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
     "commander": "^2.9.0",
+    "download-git-repo": "^1.0.1",
     "git-exec": "^0.2.1",
     "global-modules": "^1.0.0",
     "lodash": "^4.17.4",
