--- a/templates/react-mobx-ls/package.json
+++ b/templates/react-mobx-ls/package.json
@@ -89,6 +89,7 @@
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.3",
     "moment": "^2.14.1",
+    "nodemon": "1.12.5",
     "nornj": "^0.4.2-rc.12",
     "nornj-loader": "^0.4.2-beta.1",
     "nornj-react": "^0.4.2-rc.2",
@@ -101,6 +102,7 @@
     "react-widgets": "^3.4.6",
     "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
+    "vic-common": "0.0.140",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1",
@@ -110,6 +112,7 @@
   },
   "njCliConfig": {
     "templateType": "multi-page",
-    "privateLib": "vic-common"
+    "privateLib": "vic-common",
+    "privateNpmUrl": "http://192.168.151.68:8001"
   }
 }
