--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -55,7 +55,7 @@
     "less-loader": "^4.0.4",
     "multer": "^1.3.0",
     "node-sass": "^3.13.1",
-    "nodemon": "^1.12.1",
+    "nodemon": "1.12.5",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
@@ -73,6 +73,7 @@
     "typescript": "^2.2.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.7",
+    "vic-common": "0.0.140",
     "webpack": "^3.8.1",
     "webpack-dev-server": "2.7.1",
     "webpack-hot-middleware": "^2.17.1"
@@ -114,7 +115,8 @@
     ]
   },
   "njCliConfig": {
-    "templateType": "multi-page",
-    "privateLib": "vic-common"
+    "templateType": "single-page",
+    "privateLib": "vic-common",
+    "privateNpmUrl": "http://192.168.151.68:8001"
   }
 }
