--- a/templates/react-mobx/package.json
+++ b/templates/react-mobx/package.json
@@ -30,6 +30,7 @@
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-external-helpers": "^6.4.0",
+    "babel-plugin-import": "^1.6.2",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-classes": "^6.5.2",
@@ -90,7 +91,7 @@
     "mobx-react": "^4.3.3",
     "moment": "^2.14.1",
     "nodemon": "1.12.5",
-    "nornj": "^0.4.2-rc.12",
+    "nornj": "^0.4.2-rc.17",
     "nornj-loader": "^0.4.2-beta.1",
     "nornj-react": "^0.4.2-rc.2",
     "postcss-loader": "^1.3.3",
