--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nornj-cli",
-  "version": "0.1.15-alpha.1",
+  "version": "0.1.15-alpha.3",
   "description": "The CLI for scaffolding NornJ template projects, and do more things",
   "bin": {
     "nj": "bin/nj"
@@ -9,7 +9,7 @@
     "bin/",
     "docs/",
     "lib/",
-    "templates/sourceFiles/",
+    "templates/",
     "config.json",
     "LICENSE",
     "README.md"
@@ -32,13 +32,13 @@
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
     "commander": "^2.9.0",
+    "cpx": "^1.5.0",
     "download-git-repo": "^1.0.1",
     "git-exec": "^0.2.1",
     "global-modules": "^1.0.0",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "nornj": "^0.4.2-rc.17",
-    "ora": "^1.3.0",
-    "unzip": "^0.1.11"
+    "ora": "^1.3.0"
   }
 }
