Upgrade to React v16

--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev-web": "npm run server | cross-env Project=web webpack-dev-server --host 0.0.0.0 --inline --hot --progress",
     "build-web": "cross-env Project=web NODE_ENV=production webpack --progress --hide-modules",
-    "build-web-test": "cross-env Project=web NODE_ENV=test webpack --progress --hide-modules",
+    "build-web-test": "cross-env Project=web BABEL_ENV=development NODE_ENV=test webpack --progress --hide-modules",
     "server": "nodemon ./server/app.js",
     "lint": "eslint src"
   },
@@ -44,6 +44,8 @@
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.0.1",
     "core-decorators": "^0.14.0",
+    "core-js": "^2.5.1",
+    "create-react-class": "^15.6.2",
     "cross-env": "^1.0.8",
     "css-loader": "^0.28.4",
     "eslint": "^4.11.0",
@@ -63,12 +65,12 @@
     "postcss-pxtorem": "^4.0.1",
     "postcss-smart-import": "^0.7.2",
     "precss": "^1.4.0",
+    "prop-types": "^15.6.0",
     "react-hot-loader": "^3.1.2",
     "redux-devtools": "^3.3.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.4.2",
-    "svg-sprite-loader": "0.3.1",
     "template-html-loader": "^1.0.0",
     "ts-loader": "^2.0.2",
     "typescript": "^2.2.1",
@@ -80,8 +82,7 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
-    "antd": "^2.11.2",
-    "antd-mobile": "^1.4.1",
+    "antd": "^3.0.3",
     "array-from": "^2.1.1",
     "bundle-loader": "^0.5.5",
     "console-polyfill": "^0.3.0",
@@ -97,10 +98,10 @@
     "nornj": "^0.4.2-rc.17",
     "nornj-loader": "^0.4.2-beta.1",
     "nornj-react": "^0.4.2-rc.2",
-    "react": "^15.6.2",
+    "react": "^16.2.0",
     "react-burger-menu": "^2.1.3",
     "react-d3-tree": "^1.3.2",
-    "react-dom": "^15.6.2",
+    "react-dom": "^16.2.0",
     "react-mixin": "^2.0.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
