--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "download-git-repo": "^1.0.1",
     "git-exec": "^0.2.1",
     "global-modules": "^1.0.0",
+    "inquirer": "^5.0.0",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "nornj": "^0.4.2-rc.18",
     "ora": "^1.3.0",
+    "process.args": "0.0.6",
     "targz": "^1.0.1"
   }
 }
