--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -2,7 +2,6 @@
   "name": "nj-react-mst-boilerplate",
   "version": "1.0.0",
   "description": "React + Mobx-state-tree项目模板",
-  "templateType": "single-page",
   "main": "app.js",
   "scripts": {
     "dev-web": "npm run server | cross-env Project=web webpack-dev-server --host 0.0.0.0 --inline --hot --progress",
@@ -76,7 +75,6 @@
     "typescript": "^2.2.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.7",
-    "vic-common": "0.0.140",
     "webpack": "^3.8.1",
     "webpack-dev-server": "2.7.1",
     "webpack-hot-middleware": "^2.17.1"
@@ -89,13 +87,13 @@
     "echarts": "3.6.2",
     "es6-promise": "^4.1.0",
     "es6-weak-map": "^2.0.2",
-    "flarej": "^0.1.6",
+    "flarej": "^0.1.11",
     "fullpage-react": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
     "mobx-state-tree": "^1.2.0",
-    "nornj": "^0.4.2-rc.17",
+    "nornj": "^0.4.2-rc.22",
     "nornj-loader": "^0.4.2-beta.1",
     "nornj-react": "^0.4.2-rc.2",
     "react": "^16.2.0",
@@ -117,8 +115,6 @@
     ]
   },
   "njCliConfig": {
-    "templateType": "single-page",
-    "privateLib": "vic-common",
-    "privateNpmUrl": "http://192.168.151.68:8001"
+    "templateType": "single-page"
   }
 }
