--- a/templates/react-mobx/package.json
+++ b/templates/react-mobx/package.json
@@ -2,7 +2,6 @@
   "name": "nj-react-mobx-boilerplate",
   "version": "1.0.0",
   "description": "NornJ + React + Mobx boilerplate",
-  "templateType": "multi-page",
   "main": "lib/common/base.js",
   "files": [
     "lib/",
@@ -91,7 +90,7 @@
     "mobx-react": "^4.3.3",
     "moment": "^2.14.1",
     "nodemon": "1.12.5",
-    "nornj": "^0.4.2-rc.17",
+    "nornj": "^0.4.2-rc.22",
     "nornj-loader": "^0.4.2-beta.1",
     "nornj-react": "^0.4.2-rc.2",
     "postcss-loader": "^1.3.3",
@@ -103,7 +102,6 @@
     "react-widgets": "^3.4.6",
     "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
-    "vic-common": "0.0.140",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1",
@@ -112,8 +110,6 @@
     "yargs": "^4.2.0"
   },
   "njCliConfig": {
-    "templateType": "multi-page",
-    "privateLib": "vic-common",
-    "privateNpmUrl": "http://192.168.151.68:8001"
+    "templateType": "multi-page"
   }
 }
