--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -48,6 +48,10 @@
     "cross-env": "^1.0.8",
     "css-loader": "^0.28.4",
     "eslint": "^4.11.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.7.0",
