--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nornj-cli",
-  "version": "0.1.15-alpha.31",
+  "version": "0.1.15",
   "description": "The CLI for scaffolding NornJ template projects, and do more things",
   "bin": {
     "nj": "bin/nj"
@@ -10,6 +10,7 @@
     "docs/",
     "lib/",
     "templates/sourceFiles/",
+    "CHANGELOG.md",
     "LICENSE",
     "README.md"
   ],
@@ -37,9 +38,10 @@
     "inquirer": "^5.0.0",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
-    "nornj": "^0.4.2-rc.18",
+    "nornj": "^0.4.2-rc.35",
     "ora": "^1.3.0",
     "process.args": "0.0.6",
-    "targz": "^1.0.1"
+    "targz": "^1.0.1",
+    "yargs": "^11.0.0"
   }
 }
