--- a/templates/react-mobx/package.json
+++ b/templates/react-mobx/package.json
@@ -21,7 +21,7 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "antd": "^2.7.1",
+    "antd": "^3.0.3",
     "array-from": "^2.1.1",
     "autoprefixer": "^6.3.4",
     "babel-cli": "^6.26.0",
@@ -50,6 +50,7 @@
     "cookie-parser": "^1.4.3",
     "core-decorators": "^0.14.0",
     "core-js": "^2.5.1",
+    "create-react-class": "^15.6.2",
     "cross-env": "^5.1.1",
     "css-loader": "^0.26.4",
     "echarts": "^3.3.2",
@@ -64,7 +65,7 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
-    "flarej": "^0.1.6",
+    "flarej": "^0.1.19",
     "font-awesome": "^4.7.0",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
@@ -90,14 +91,15 @@
     "mobx-react": "^4.3.3",
     "moment": "^2.14.1",
     "nodemon": "1.12.5",
-    "nornj": "^0.4.2-rc.22",
-    "nornj-loader": "^0.4.2-beta.1",
+    "nornj": "^0.4.2-rc.35",
+    "nornj-loader": "^0.4.2-rc.1",
     "nornj-react": "^0.4.2-rc.2",
     "postcss-loader": "^1.3.3",
+    "prop-types": "^15.6.0",
     "querystring": "^0.2.0",
-    "react": "^15.6.2",
+    "react": "^16.2.0",
     "react-addons-update": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react-dom": "^16.2.0",
     "react-fontawesome": "^1.5.0",
     "react-widgets": "^3.4.6",
     "style-loader": "^0.16.0",
