--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -4,6 +4,7 @@
   "description": "React + Mobx-state-tree项目模板",
   "main": "app.js",
   "scripts": {
+    "dev": "npm run dev-web",
     "dev-web": "npm run server | cross-env Project=web webpack-dev-server --host 0.0.0.0 --inline --hot --progress",
     "build-web": "cross-env Project=web NODE_ENV=production webpack --progress --hide-modules",
     "build-web-test": "cross-env Project=web BABEL_ENV=development NODE_ENV=test webpack --progress --hide-modules",
@@ -91,14 +92,14 @@
     "echarts": "3.6.2",
     "es6-promise": "^4.1.0",
     "es6-weak-map": "^2.0.2",
-    "flarej": "^0.1.11",
+    "flarej": "^0.1.19",
     "fullpage-react": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
     "mobx-state-tree": "^1.2.0",
-    "nornj": "^0.4.2-rc.22",
-    "nornj-loader": "^0.4.2-beta.1",
+    "nornj": "^0.4.2-rc.35",
+    "nornj-loader": "^0.4.2-rc.1",
     "nornj-react": "^0.4.2-rc.2",
     "react": "^16.2.0",
     "react-burger-menu": "^2.1.3",
