--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -89,18 +89,20 @@
     "array-from": "^2.1.1",
     "bundle-loader": "^0.5.5",
     "console-polyfill": "^0.3.0",
-    "echarts": "3.6.2",
+    "echarts": "^3.8.5",
+    "element-react": "^1.4.10",
+    "element-theme-default": "^1.4.13",
     "es6-promise": "^4.1.0",
     "es6-weak-map": "^2.0.2",
-    "flarej": "^0.1.19",
+    "flarej": "^0.2.0-alpha.1",
     "fullpage-react": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
     "mobx-state-tree": "^1.2.0",
-    "nornj": "^0.4.2-rc.35",
-    "nornj-loader": "^0.4.2-rc.1",
-    "nornj-react": "^0.4.2-rc.2",
+    "nornj": "^0.4.2-rc.38",
+    "nornj-loader": "^0.4.2-rc.2",
+    "nornj-react": "^0.4.2-rc.10",
     "react": "^16.2.0",
     "react-burger-menu": "^2.1.3",
     "react-d3-tree": "^1.3.2",
