--- a/templates/react-mobx/package.json
+++ b/templates/react-mobx/package.json
@@ -91,9 +91,9 @@
     "mobx-react": "^4.3.3",
     "moment": "^2.14.1",
     "nodemon": "1.12.5",
-    "nornj": "^0.4.2-rc.35",
-    "nornj-loader": "^0.4.2-rc.1",
-    "nornj-react": "^0.4.2-rc.2",
+    "nornj": "^0.4.2",
+    "nornj-loader": "^0.4.2",
+    "nornj-react": "^0.4.2",
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.6.0",
     "querystring": "^0.2.0",
