--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -100,9 +100,9 @@
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
     "mobx-state-tree": "^1.2.0",
-    "nornj": "^0.4.2-rc.38",
-    "nornj-loader": "^0.4.2-rc.2",
-    "nornj-react": "^0.4.2-rc.10",
+    "nornj": "^0.4.2",
+    "nornj-loader": "^0.4.2",
+    "nornj-react": "^0.4.2",
     "react": "^16.2.0",
     "react-burger-menu": "^2.1.3",
     "react-d3-tree": "^1.3.2",
