--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -94,13 +94,13 @@
     "element-theme-default": "^1.4.13",
     "es6-promise": "^4.1.0",
     "es6-weak-map": "^2.0.2",
-    "flarej": "^0.2.0-alpha.1",
+    "flarej": "^0.2.4",
     "fullpage-react": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
     "mobx-state-tree": "^1.2.0",
-    "nornj": "^0.4.2",
+    "nornj": "^0.4.4",
     "nornj-loader": "^0.4.2",
     "nornj-react": "^0.4.2",
     "react": "^16.2.0",
