--- a/package.json
+++ b/package.json
@@ -43,5 +43,12 @@
     "process.args": "0.0.6",
     "targz": "^1.0.1",
     "yargs": "^11.0.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2"
   }
 }
