--- a/templates/react-mst-jsx/.eslintrc
+++ b/templates/react-mst-jsx/.eslintrc
@@ -11,27 +11,55 @@
     "mocha": true,
     "es6": true
   },
-  "ecmaFeatures": {
-    "modules": true,
-    "jsx": true
-  },
   "rules": {
     "indent": [
       1,
       2,
-      { "SwitchCase": 2 }
+      {
+        "SwitchCase": 1,
+        "ignoredNodes": ["TemplateLiteral > *"]
+      }
     ],
     "react/jsx-curly-spacing": 0,
-    "react/jsx-indent-props": [ 1, 2 ],
-    "react/jsx-indent": [ 1, 2 ],
-    "jsx-quotes": [ 1, "prefer-double" ],
+    "react/jsx-indent-props": [
+      1,
+      2
+    ],
+    "react/jsx-indent": [
+      1,
+      2
+    ],
+    "jsx-quotes": [
+      1,
+      "prefer-double"
+    ],
     "camelcase": [
       1,
-      { "properties": "always" }
+      {
+        "properties": "always"
+      }
     ],
-    "comma-dangle": [ 0, "never" ],
-    "semi": [ 1, "always" ],
-    "quotes": [ 1, "single" ],
-    "strict": [ 2, "global" ]
+    "comma-dangle": [
+      0,
+      "never"
+    ],
+    "semi": [
+      1,
+      "always"
+    ],
+    "quotes": [
+      1,
+      "single"
+    ],
+    "strict": [
+      1,
+      "global"
+    ],
+    "no-multiple-empty-lines": [
+      1,
+      {
+        "max": 1
+      }
+    ]
   }
 }
