--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "npm run dev-web",
-    "dev-web": "npm run server | cross-env Project=web webpack-dev-server --host 0.0.0.0 --inline --hot --progress",
+    "dev-web": "node -v | npm run server | cross-env Project=web webpack-dev-server --host 0.0.0.0 --inline --hot --progress",
     "build-web": "cross-env Project=web NODE_ENV=production webpack --progress --hide-modules",
     "build-web-test": "cross-env Project=web BABEL_ENV=development NODE_ENV=test webpack --progress --hide-modules",
     "server": "nodemon ./server/app.js",
