--- a/templates/react-mst-jsx/package.json
+++ b/templates/react-mst-jsx/package.json
@@ -4,10 +4,9 @@
   "description": "NornJ + React + Mobx-state-tree boilerplate",
   "main": "app.js",
   "scripts": {
-    "dev": "npm run dev-web",
-    "dev-web": "node -v | npm run server | cross-env Project=web webpack-dev-server --host 0.0.0.0 --inline --hot --progress",
-    "build-web": "cross-env Project=web NODE_ENV=production webpack --progress --hide-modules",
-    "build-web-test": "cross-env Project=web BABEL_ENV=development NODE_ENV=test webpack --progress --hide-modules",
+    "dev": "node -v | npm run server | cross-env Project=web webpack-dev-server --host 0.0.0.0 --inline --hot --progress",
+    "build": "cross-env Project=web NODE_ENV=production webpack --progress --hide-modules",
+    "build-test": "cross-env Project=web BABEL_ENV=development NODE_ENV=test webpack --progress --hide-modules",
     "server": "nodemon ./server/app.js",
     "lint": "eslint src"
   },
