--- a/templates/react-mst-jsx/.eslintrc
+++ b/templates/react-mst-jsx/.eslintrc
@@ -17,14 +17,11 @@
       2,
       {
         "SwitchCase": 1,
-        "ignoredNodes": ["TemplateLiteral > *"]
+        "ignoredNodes": ["TemplateLiteral > *", "JSXOpeningElement > *"]
       }
     ],
     "react/jsx-curly-spacing": 0,
-    "react/jsx-indent-props": [
-      1,
-      2
-    ],
+    "react/jsx-indent-props": 0,
     "react/jsx-indent": [
       1,
       2
@@ -49,7 +46,10 @@
     ],
     "quotes": [
       1,
-      "single"
+      "single",
+      {
+        "allowTemplateLiterals": true
+      }
     ],
     "strict": [
       1,
