--- a/templates/react-mst-jsx/package.json
+++ b/templates/react-mst-jsx/package.json
@@ -24,7 +24,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-import": "^1.6.2",
-    "babel-plugin-nornj-in-jsx": "^0.4.2-alpha.8",
+    "babel-plugin-nornj-in-jsx": "^0.4.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
