--- a/templates/react-mst-jsx/package.json
+++ b/templates/react-mst-jsx/package.json
@@ -76,6 +76,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.0",
     "styled-jsx": "^2.2.6",
+    "styled-jsx-plugin-postcss": "^0.1.3",
     "styled-jsx-plugin-sass": "^0.2.4",
     "stylus-loader": "^1.4.2",
     "template-html-loader": "^1.0.0",
