Add echarts-for-react for react-mst-universal template

--- a/templates/react-mst-universal/package.json
+++ b/templates/react-mst-universal/package.json
@@ -95,6 +95,7 @@
     "bundle-loader": "^0.5.5",
     "console-polyfill": "^0.3.0",
     "echarts": "^3.8.5",
+    "echarts-for-react": "^2.0.11",
     "element-react": "^1.4.10",
     "element-theme-default": "^1.4.13",
     "es6-promise": "^4.1.0",
