--- a/templates/react-mst-universal/package.json
+++ b/templates/react-mst-universal/package.json
@@ -78,6 +78,8 @@
     "styled-jsx": "^2.2.6",
     "styled-jsx-plugin-postcss": "^0.1.3",
     "styled-jsx-plugin-sass": "^0.2.4",
+    "stylelint": "^9.2.1",
+    "stylelint-config-standard": "^18.2.0",
     "stylus-loader": "^1.4.2",
     "template-html-loader": "^1.0.0",
     "ts-loader": "^2.0.2",
