--- a/templates/react-mst-universal/.prettierrc
+++ b/templates/react-mst-universal/.prettierrc
@@ -1,6 +1,7 @@
 {
   "eslintIntegration": true,
   "stylelintIntegration": true,
+  "printWidth": 120,
   "tabWidth": 2,
   "singleQuote": true,
   "semi": true,
