--- a/templates/react-mst-universal/.stylelintrc
+++ b/templates/react-mst-universal/.stylelintrc
@@ -41,6 +41,7 @@
     "color-hex-case": null,
     "color-hex-length": null,
     "block-no-empty": null,
-    "declaration-colon-newline-after": null
+    "declaration-colon-newline-after": null,
+    "value-list-comma-newline-after": null
   }
 }
