Added "nj ac" and "nj as" command

--- a/templates/react-mst-universal/package.json
+++ b/templates/react-mst-universal/package.json
@@ -143,6 +143,14 @@
       "chart-nornj",
       "form-nornj",
       "empty-nornj"
+    ],
+    "componentTemplates": [
+      "default",
+      "default-nornj"
+    ],
+    "storeTemplates": [
+      "default",
+      "default-fetch"
     ]
   }
 }
