--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -24,6 +24,8 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-import": "^1.6.2",
+    "babel-plugin-nornj-in-jsx": "^0.4.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
@@ -68,11 +70,16 @@
     "postcss-pxtorem": "^4.0.1",
     "postcss-smart-import": "^0.7.2",
     "precss": "^1.4.0",
+    "prettier": "^1.13.5",
+    "prettier-eslint": "^8.8.1",
+    "prettier-stylelint": "^0.4.2",
     "prop-types": "^15.6.0",
     "react-hot-loader": "^3.1.2",
     "redux-devtools": "^3.3.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.0",
+    "stylelint": "^9.2.1",
+    "stylelint-config-standard": "^18.2.0",
     "stylus-loader": "^1.4.2",
     "template-html-loader": "^1.0.0",
     "ts-loader": "^2.0.2",
