--- a/templates/react-mst-universal/package.json
+++ b/templates/react-mst-universal/package.json
@@ -25,7 +25,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-import": "^1.6.2",
-    "babel-plugin-nornj-in-jsx": "^0.4.2",
+    "babel-plugin-nornj-in-jsx": "^0.4.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -95,7 +95,7 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
-    "antd": "^3.0.3",
+    "antd": "3.7.3",
     "array-from": "^2.1.1",
     "axios": "^0.18.0",
     "bundle-loader": "^0.5.5",
@@ -106,19 +106,19 @@
     "element-theme-default": "^1.4.13",
     "es6-promise": "^4.1.0",
     "es6-weak-map": "^2.0.2",
-    "flarej": "^0.2.4",
+    "flarej": "^0.3.0",
     "fullpage-react": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
-    "mobx": "^3.1.16",
-    "mobx-react": "^4.2.1",
-    "mobx-state-tree": "^1.2.0",
-    "nornj": "^0.4.5",
+    "mobx": "^4.3.1",
+    "mobx-react": "^5.2.3",
+    "mobx-state-tree": "^3.0.2",
+    "nornj": "^0.4.9",
     "nornj-loader": "^0.4.2",
-    "nornj-react": "^0.4.2",
-    "react": "^16.2.0",
+    "nornj-react": "^0.4.3",
+    "react": "^16.4.1",
     "react-burger-menu": "^2.1.3",
     "react-d3-tree": "^1.3.2",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.4.1",
     "react-mixin": "^2.0.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
