--- a/templates/react-mobx/package.json
+++ b/templates/react-mobx/package.json
@@ -21,7 +21,7 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "antd": "^3.0.3",
+    "antd": "3.7.3",
     "array-from": "^2.1.1",
     "autoprefixer": "^6.3.4",
     "babel-cli": "^6.26.0",
@@ -53,7 +53,7 @@
     "create-react-class": "^15.6.2",
     "cross-env": "^5.1.1",
     "css-loader": "^0.26.4",
-    "echarts": "^3.3.2",
+    "echarts": "^4.1.0",
     "es6-promise": "^3.2.1",
     "es6-weak-map": "^2.0.1",
     "eslint": "^4.10.0",
@@ -65,7 +65,7 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
-    "flarej": "^0.2.4",
+    "flarej": "^0.3.0",
     "font-awesome": "^4.7.0",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
@@ -91,15 +91,15 @@
     "mobx-react": "^4.3.3",
     "moment": "^2.14.1",
     "nodemon": "1.12.5",
-    "nornj": "^0.4.4",
+    "nornj": "^0.4.9",
     "nornj-loader": "^0.4.2",
-    "nornj-react": "^0.4.2",
+    "nornj-react": "^0.4.3",
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.6.0",
     "querystring": "^0.2.0",
-    "react": "^16.2.0",
+    "react": "^16.4.1",
     "react-addons-update": "^15.6.2",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.4.1",
     "react-fontawesome": "^1.5.0",
     "react-widgets": "^3.4.6",
     "style-loader": "^0.16.0",
