--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -4,6 +4,7 @@
   "description": "NornJ + React + Mobx-state-tree boilerplate",
   "main": "app.js",
   "scripts": {
+    "start": "npm run dev",
     "dev": "node -v | npm run server | cross-env Project=web webpack-dev-server --host 0.0.0.0 --inline --hot --progress",
     "build": "cross-env Project=web NODE_ENV=production webpack --progress --hide-modules",
     "build-test": "cross-env Project=web BABEL_ENV=development NODE_ENV=test webpack --progress --hide-modules",
@@ -101,13 +102,13 @@
     "element-theme-default": "^1.4.13",
     "es6-promise": "^4.1.0",
     "es6-weak-map": "^2.0.2",
-    "flarej": "^0.3.0",
+    "flarej": "^0.3.1",
     "fullpage-react": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
     "mobx-state-tree": "^1.2.0",
-    "nornj": "^0.4.9",
+    "nornj": "^0.4.10",
     "nornj-loader": "^0.4.2",
     "nornj-react": "^0.4.3",
     "react": "^16.4.1",
