--- a/templates/react-mst-universal/package.json
+++ b/templates/react-mst-universal/package.json
@@ -11,7 +11,9 @@
     "build-test": "cross-env Project=web BABEL_ENV=development NODE_ENV=test webpack --progress --hide-modules",
     "build-local": "cross-env Project=local NODE_ENV=production webpack --progress --hide-modules",
     "server": "nodemon ./server/app.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "jest --config=test/jest.config.json",
+    "coverage": "jest --coverage --config=test/jest.config.json"
   },
   "author": "joe_sky",
   "license": "MIT",
@@ -27,7 +29,8 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-import": "^1.6.2",
-    "babel-plugin-nornj-in-jsx": "^0.4.5",
+    "babel-plugin-nornj-in-jsx": "^0.4.6",
+    "babel-plugin-nornj-loader": "^1.0.12",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -52,6 +55,8 @@
     "create-react-class": "^15.6.2",
     "cross-env": "^1.0.8",
     "css-loader": "^0.28.4",
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^4.11.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-babel": "^4.1.2",
@@ -62,6 +67,10 @@
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^3.2.0",
+    "jest": "^23.5.0",
+    "jest-css-modules-transform": "^2.0.0",
+    "jest-environment-enzyme": "^6.0.3",
+    "jest-enzyme": "^6.0.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "multer": "^1.3.0",
@@ -111,10 +120,11 @@
     "flarej": "^0.3.1",
     "fullpage-react": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
+    "localstorage-polyfill": "^1.0.1",
     "mobx": "^4.3.1",
     "mobx-react": "^5.2.3",
     "mobx-state-tree": "^3.0.2",
-    "nornj": "^0.4.10",
+    "nornj": "^0.4.11",
     "nornj-loader": "^0.4.2",
     "nornj-react": "^0.4.3",
     "react": "^16.4.1",
