--- a/templates/react-mst-universal/.vscode/settings.json
+++ b/templates/react-mst-universal/.vscode/settings.json
@@ -8,5 +8,6 @@
   "workbench.iconTheme": "nornj-icons",
   // "eslint.autoFixOnSave": true,
   // "editor.formatOnSave": true,
-  "prettier.stylelintIntegration": true
+  "prettier.stylelintIntegration": true,
+  "window.zoomLevel": 1
 }
