--- a/templates/react-mst-universal/package.json
+++ b/templates/react-mst-universal/package.json
@@ -20,35 +20,45 @@
   "author": "joe_sky",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-classes": "^7.0.0",
+    "@babel/plugin-transform-for-of": "^7.0.0",
+    "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "@types/react": "^15.0.16",
     "@types/react-addons-css-transition-group": "^15.0.1",
     "@types/react-dom": "^0.14.23",
     "@types/rx": "^4.1.1",
     "autoprefixer-loader": "^3.2.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-import": "^1.6.2",
-    "babel-plugin-nornj-in-jsx": "^0.4.7",
+    "babel-plugin-import": "^1.10.0",
+    "babel-plugin-nornj-in-jsx": "^0.4.10",
     "babel-plugin-nornj-loader": "^1.0.12",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-es2015-for-of": "^6.23.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.13.0",
-    "babel-preset-stage-2": "^6.1.18",
-    "babel-register": "^6.24.1",
-    "babel-runtime": "^5.8.0",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.0.1",
@@ -114,7 +124,7 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
-    "antd": "3.7.3",
+    "antd": "^3.7.3",
     "array-from": "^2.1.1",
     "axios": "^0.18.0",
     "bundle-loader": "^0.5.5",
@@ -132,9 +142,9 @@
     "mobx": "^4.3.1",
     "mobx-react": "^5.2.3",
     "mobx-state-tree": "^3.0.2",
-    "nornj": "^0.4.12",
+    "nornj": "^0.4.13",
     "nornj-loader": "^0.4.2",
-    "nornj-react": "^0.4.4",
+    "nornj-react": "^0.4.5",
     "react": "^16.4.1",
     "react-burger-menu": "^2.1.3",
     "react-d3-tree": "^1.3.2",
