--- a/templates/react-mst-universal/.babelrc
+++ b/templates/react-mst-universal/.babelrc
@@ -1,86 +1,103 @@
 {
-  "presets": ["react", "stage-0"],
+  "presets": ["@babel/preset-react"],
   "env": {
     "development": {
-      "presets": ["env"],
-      "plugins": [
-        "syntax-dynamic-import",
-        [
-          "import",
-          [
-            { "libraryName": "antd", "style": true },
-            {
-              "libraryName": "flarej",
-              "libraryDirectory": "lib/components",
-              "style": true
-            }
-          ]
-        ],
-        ["styled-jsx/babel", { "plugins": ["styled-jsx-plugin-sass", "styled-jsx-plugin-postcss"] }],
-        "nornj-in-jsx",
-        ["transform-object-rest-spread"],
-        "transform-decorators-legacy",
-        ["transform-class-properties", { "loose": false }],
-        "transform-object-assign",
-        ["transform-es2015-classes", { "loose": true }],
-        ["transform-es2015-for-of", { "loose": true }]
-      ]
+      "presets": ["@babel/preset-env"]
     },
     "production": {
-      "presets": [["env", { "modules": false }]],
-      "plugins": [
-        "syntax-dynamic-import",
+      "presets": [
         [
-          "import",
-          [
-            { "libraryName": "antd", "style": true },
-            {
-              "libraryName": "flarej",
-              "libraryDirectory": "lib/components",
-              "style": true
-            }
-          ]
-        ],
-        ["styled-jsx/babel", { "plugins": ["styled-jsx-plugin-sass", "styled-jsx-plugin-postcss"] }],
-        "nornj-in-jsx",
-        ["transform-object-rest-spread"],
-        "transform-decorators-legacy",
-        ["transform-class-properties", { "loose": false }],
-        "transform-object-assign",
-        ["transform-es2015-classes", { "loose": true }],
-        ["transform-es2015-for-of", { "loose": true }]
+          "@babel/preset-env",
+          {
+            "modules": false
+          }
+        ]
       ]
     },
     "test": {
-      "presets": ["env"],
+      "presets": ["@babel/preset-env"],
       "plugins": [
-        "syntax-dynamic-import",
-        [
-          "import",
-          [
-            { "libraryName": "antd", "style": true },
-            {
-              "libraryName": "flarej",
-              "libraryDirectory": "lib/components",
-              "style": true
-            }
-          ]
-        ],
-        ["styled-jsx/babel", { "plugins": ["styled-jsx-plugin-sass", "styled-jsx-plugin-postcss"] }],
-        "nornj-in-jsx",
         [
           "nornj-loader",
           {
             "extensions": [".t.html"]
           }
-        ],
-        ["transform-object-rest-spread"],
-        "transform-decorators-legacy",
-        ["transform-class-properties", { "loose": false }],
-        "transform-object-assign",
-        ["transform-es2015-classes", { "loose": true }],
-        ["transform-es2015-for-of", { "loose": true }]
+        ]
       ]
     }
-  }
+  },
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import",
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "style": true
+      },
+      "ant"
+    ],
+    [
+      "import",
+      {
+        "libraryName": "flarej",
+        "libraryDirectory": "lib/components",
+        "style": true
+      },
+      "fj"
+    ],
+    [
+      "styled-jsx/babel",
+      {
+        "plugins": ["styled-jsx-plugin-sass", "styled-jsx-plugin-postcss"]
+      }
+    ],
+    "nornj-in-jsx",
+    "@babel/plugin-syntax-import-meta",
+    "@babel/plugin-proposal-json-strings",
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ],
+    ["@babel/plugin-proposal-object-rest-spread"],
+    "@babel/plugin-transform-object-assign",
+
+    [
+      "@babel/plugin-transform-classes",
+      {
+        "loose": true
+      }
+    ],
+    [
+      "@babel/plugin-transform-for-of",
+      {
+        "loose": true
+      }
+    ],
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions",
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-logical-assignment-operators",
+    "@babel/plugin-proposal-optional-chaining",
+    [
+      "@babel/plugin-proposal-pipeline-operator",
+      {
+        "proposal": "minimal"
+      }
+    ],
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-do-expressions",
+    "@babel/plugin-proposal-function-bind",
+    "@babel/plugin-external-helpers",
+    "@babel/plugin-transform-runtime"
+  ]
 }
