--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "inquirer": "^5.0.0",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
-    "nornj": "^5.0.0-beta.6",
+    "nornj": "^0.4.18",
     "ora": "^1.3.0",
     "process.args": "0.0.6",
     "targz": "^1.0.1",
