--- a/templates/react-mst-universal/.vscode/extensions.json
+++ b/templates/react-mst-universal/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "shinnn.stylelint",
     "esbenp.prettier-vscode",
     "blanu.vscode-styled-jsx",
-    "andrewrazumovsky.vscode-styled-jsx-languageserver"
+    "andrewrazumovsky.vscode-styled-jsx-languageserver",
+    "jpoissonnier.vscode-styled-components"
   ]
 }
