--- a/templates/react-mst/.vscode/settings.json
+++ b/templates/react-mst/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "javascript.suggest.autoImports": false,
+  "typescript.suggest.autoImports": false,
   "css.validate": false,
   "less.validate": false,
   "scss.validate": false,
