--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs/",
     "lib/",
     "templates/sourceFiles/",
+    "templates.config.json",
     "CHANGELOG.md",
     "LICENSE",
     "README.md"
@@ -39,6 +40,7 @@
     "download-git-repo": "^1.0.1",
     "git-exec": "^0.2.1",
     "inquirer": "^5.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "nornj": "^5.0.0-rc.15",
