Upgrade react-mst template

--- a/templates/react-mst/.eslintrc
+++ b/templates/react-mst/.eslintrc
@@ -57,6 +57,7 @@
     "@typescript-eslint/explicit-member-accessibility": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/no-unused-vars": 0,
+    "@typescript-eslint/no-var-requires": 0,
     "react/jsx-curly-spacing": 0,
     "react/jsx-indent-props": 0,
     "react/jsx-indent": [1, 2],
